# swipe-select

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  ErrorBoundary.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: export.rs  mod.rs  scan.rs  session.rs  thumbnail.rs
src-tauri/src/db/: mod.rs  sqlite.rs
src-tauri/src/fsutil/: copy.rs  hash.rs  mod.rs
src-tauri/src/models/: export.rs  mod.rs  photo.rs  session.rs
src-tauri/src/thumbnails/: generate.rs  mod.rs
src/hooks/: useDecisionActions.ts  useKeyboardShortcuts.ts  usePreloader.ts
src/lib/: imagePath.ts  tauriApi.ts
src/screens/DashboardScreen/: DashboardScreen.css  DashboardScreen.tsx
src/screens/ExportDialog/: ExportDialog.css  ExportDialog.tsx
src/screens/ImportScreen/: ImportScreen.css  ImportScreen.tsx
src/screens/ReviewScreen/: ProgressBar.tsx  ReviewScreen.css  ReviewScreen.tsx  StatsBar.tsx  SwipeCard.css  SwipeCard.tsx  ZoomViewer.css  ZoomViewer.tsx
src/store/: sessionStore.ts  uiStore.ts  undoStore.ts
src/styles/: global.css
src/types/: export.ts  image.ts  session.ts
