[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.3", features = ["fs", "rt-multi-thread", "macros"] }
rayon = "1.12.0"
walkdir = "2.5.0"
sha2 = "0.11.0"
filetime = "0.2.29"
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
kamadak-exif = "0.6.1"

